cluster-resources/services/n8n/n8n-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: n8n
spec:
  selector:
    app.kubernetes.io/name: n8n
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
