cluster-resources/services/n8n/n8n-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: [n8n.golebiowski.dev]
      secretName: letsencrypt-prod-anton-tls-secret
  rules:
    - host: n8n.golebiowski.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 5678
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: n8n-release-webhook
                port:
                  number: 5678
